--- a/Changes
+++ b/Changes
@@ -1,5 +1,4 @@
 Revision history for AnyEvent-WebService-Notifo
  
-{{$NEXT}}
-    -
-
+0.001 Sun Oct 10 10:27:34 UTC 2010
+       * Initial version
